# vf_project

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: python-package.yml
data/input/: usd_zero_curve_2020.csv
data/input/AMZN/: amzn_forward_prices_2020.csv  amzn_spot_prices_2020.csv
docs/: adapters.puml  entrypoints.puml  final_iv_validation.puml  fitter.puml  raw_iv_filtering.puml  service_layer.puml  volfitter_docs.md
notebooks/: volfitter_visualization.ipynb
src/volfitter/: composition_root.py  config.py  volfitter.py
src/volfitter/adapters/: current_time_supplier.py  final_iv_consumer.py  forward_curve_supplier.py  option_metrics_helpers.py  pricing_supplier.py  raw_iv_supplier.py  sample_data_loader.py
src/volfitter/config/: config.py
src/volfitter/domain/: datamodel.py  final_iv_validation.py  fitter.py  raw_iv_filtering.py
src/volfitter/entrypoints/: volfitter.py
src/volfitter/service_layer/: service.py
tests/: assertions.py  conftest.py
tests/domain/: test_fitter.py
tests/functional/: test_volfitter.py
tests/regression/: regression_test_adapters.py  test_volfitter_regression.py  test_volfitter_regression_cases.py
tests/unit/: test_current_time_supplier.py  test_final_iv_validation.py  test_fitter.py  test_forward_curve_supplier.py  test_pricing_supplier.py  test_raw_iv_filtering.py  test_raw_iv_supplier.py  test_sample_data_loader.py  test_service.py
tests/volfitter/: test_volfitter.py
tests/volfitter/domain/: test_fitter.py
(+2 files in other folders)
