[metadata]
name = volfitter
version = 3.14

[options]
install_requires =
    dataclasses
    datetime
    numpy
    pandas
packages = find:
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
        volfitter = volfitter.entrypoints.volfitter:run

[flake8]
max-line-length = 88
extend-ignore = E203
