[metadata]
name = volfitter
version = 3.14
description = A Python package implementing a simple implied volatility fitter.
url = https://github.com/clberger/volfitter
author = Carsen Berger
author_email = carsen.berger@gmail.com

[options]
install_requires =
    apscheduler
    dataclasses
    datetime
    environ-config
    numpy
    pandas
    pandas_market_calendars
    scipy
packages = find:
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
        volfitter = volfitter.entrypoints.volfitter:run

[flake8]
max-line-length = 88
extend-ignore = E203
